--- a/templates/recipe_manager.html
+++ b/templates/recipe_manager.html
@@ -25,21 +25,29 @@
             <h3>Ingrediënten:</h3>
             <div id="ingredients-container">
                 <!-- Ingredient fields will be added here dynamically -->
-                <div class="ingredient-row">
-                    <input type="text" class="ingredient-input" placeholder="Voer ingrediënt in">
-                </div>
-                <div class="ingredient-row">
-                    <input type="text" class="ingredient-input" placeholder="Voer ingrediënt in">
-                </div>
-                <div class="ingredient-row">
-                    <input type="text" class="ingredient-input" placeholder="Voer ingrediënt in">
-                </div>
-                <div class="ingredient-row">
-                    <input type="text" class="ingredient-input" placeholder="Voer ingrediënt in">
-                </div>
-                <div class="ingredient-row">
-                    <input type="text" class="ingredient-input" placeholder="Voer ingrediënt in">
-                </div>
+                {% for i in range(5) %}
+                    <div class="ingredient-row">
+                        <input type="text" class="ingredient-input" placeholder="Voer ingrediënt in">
+                        <select class="ingredient-category">
+                            <option value="" selected disabled style="color: #999;">Selecteer een categorie</option>
+                            <option value="droge-waren">Droge waren</option>
+                            <option value="verse-groenten-fruit">Verse groenten en fruit</option>
+                            <option value="vlees-vis">Vlees en vis</option>
+                            <option value="zuivel">Zuivel</option>
+                            <option value="brood-bakkerij">Brood en bakkerij</option>
+                            <option value="diepvries">Diepvries</option>
+                            <option value="conserven">Conserven</option>
+                            <option value="dranken">Dranken</option>
+                            <option value="snacks">Snacks</option>
+                            <option value="ontbijt">Ontbijt</option>
+                            <option value="broodbeleg">Broodbeleg</option>
+                            <option value="baby">Baby</option>
+                            <option value="kruiden">Kruiden</option>
+                            <option value="non-food">Non-food</option>
+                            <option value="overig">Overig</option>
+                        </select>
+                    </div>
+                {% endfor %}
             </div>
             
             <button id="add-recipe-btn" class="btn primary-btn">Recept Toevoegen</button>
@@ -55,7 +63,13 @@
                             <h3>{{ recipe.name }}</h3>
                             <ul>
                                 {% for ingredient in recipe.ingredients %}
-                                    <li>{{ ingredient }}</li>
+                                    <li>
+                                        {% if ingredient.name %}
+                                            {{ ingredient.name }} - <em>{{ ingredient.category }}</em>
+                                        {% else %}
+                                            {{ ingredient }}
+                                        {% endif %}
+                                    </li>
                                 {% endfor %}
                             </ul>
                             <button class="delete-btn">×</button>
