--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -114,6 +114,7 @@ input[type="text"]:focus {
     line-height: 1.5;
     border-radius: 0.25rem;
     cursor: pointer;
+    text-decoration: none;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
