Updated text styling for "Nog geen recepten toegevoegd"

--- a/templates/recipe_manager.html
+++ b/templates/recipe_manager.html
@@ -78,7 +78,8 @@
                         </div>
                     {% endfor %}
                 {% else %}
-                    <p>Nog geen recepten toegevoegd.</p>
+                    <p><i>Nog geen recepten toegevoegd</i></p>
+                    <br></br>
                 {% endif %}
             </div>
             
